fix bug not showing description movie when hover

--- a/src/client/src/components/card/Card.css
+++ b/src/client/src/components/card/Card.css
@@ -35,3 +35,13 @@
     left: 0;
 
 }
+
+.hover{
+    display: flex;
+    flex-direction: column;
+}
+
+.image-video-container{
+    width: auto;
+    height: auto;
+}
